--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "electron": "ng build --base-href ./ && electron ."
+    "electron": "ng build --base-href ./ && electron .",
+    "windows-release": "electron-packager . --platform=win32 --arch=x64 Wfrly --overwrite=true"
   },
   "private": true,
   "dependencies": {
@@ -34,6 +35,7 @@
     "@types/node": "^20.2.5",
     "@types/webpack-env": "^1.18.1",
     "electron": "^25.0.0",
+    "electron-packager": "^17.1.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
